<resources>
    <string name="app_name">Lab4_calcs</string>

    <string name="text_result"></string>
    <string name="button_clear">C</string>

    <string name="button_equal">=</string>

    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>

    <string name="button_point">.</string>

    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_del">/</string>
    <string name="button_multi">*</string>
    <string name="button_sin">sin(x)</string>
    <string name="button_cos">cos(x)</string>
    <string name="button_sqrt">sqrt(x)</string>
    <string name="button_pow2">x^2</string>

    <string name="button_e">e^x</string>
    <string name="button_log10">log10(x)</string>
    <string name="button_log2">log2(x)</string>
    <string name="button_ln">ln(x)</string>
    <string name="button_pow3">x^3</string>
</resources>