<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    tools:ignore="ExtraText">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDEDED"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"
            android:stretchColumns="*"

            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@android:color/transparent"
                    android:text="///"
                    android:textColor="@color/black"
                    android:gravity="left"
                    android:onClick="OnClickMenu"

                    />

            </TableRow>


            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E3E3E3"
                android:text="@string/text_result"
                android:textSize="36sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_clear" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_plus" />

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_minus" />

                <Button
                    android:id="@+id/button_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_del" />

                <Button
                    android:id="@+id/button_multi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_multi" />

                <Button
                    android:id="@+id/button_equals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_equal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <Button
                    android:id="@+id/button_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_point"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/button_sin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_sin"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/button_cos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_cos"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/button_sqrt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_sqrt"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/button_pow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_pow2"
                    android:textSize="10sp"/>

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_0" />

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_1" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_2" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_3" />

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_5" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_6" />

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_7" />

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_8" />

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClick"
                    android:text="@string/button_9" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>